--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yashinfilon.github.io/Reactjs_Demo/",
+  "homepage": "https://yashinfilon.github.io/Reactjs_Demo",
   "name": "build",
   "version": "0.1.0",
   "private": true,
